apps/charts/ginger/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: ginger-redis
  namespace: ginger-ai
spec:
  ports:
    - port: 6379
  selector:
    app: ginger-redis
---
apiVersion: v1
kind: Service
metadata:
  name: ginger-chromadb
  namespace: ginger-ai
spec:
  ports:
    - port: 8000
  selector:
    app: ginger-chromadb
---
apiVersion: v1
kind: Service
metadata:
  name: ginger-litellm
  namespace: ginger-ai
spec:
  ports:
    - port: 4000
  selector:
    app: ginger-litellm
---
apiVersion: v1
kind: Service
metadata:
  name: ginger-app
  namespace: ginger-ai
spec:
  ports:
    - port: 8007
      targetPort: 8007
  selector:
    app: ginger-app
