apps/charts/ginger/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ginger-ingress
  namespace: applications
  annotations:
    kubernetes.io/ingress.class: public
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
spec:
  rules:
    - host: ginger.westdynamics.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ginger-app
                port:
                  number: 8007
